FormButton in FormSelect: force hasText FormButton property,  workaround for collapsing empty-text buttons, demo fixtures, use default values (in FormSelect, Menu) from first options element for singleChoice: forced mode.

--- a/src/forms/FormButton/FormButton.pcss
+++ b/src/forms/FormButton/FormButton.pcss
@@ -1,7 +1,7 @@
 /** @module FormButton.styles
  *  @desc Only basic elements geometry
  *  @since 2020.07.20, 19:24
- *  @changed 2021.02.15, 18:28
+ *  @changed 2021.08.31, 13:01
  */
 
 .FormButton {
@@ -59,6 +59,10 @@
     display: block; // ???
     overflow: hidden;
     text-overflow: ellipsis;
+    ^&_hasText &:empty {
+      // NOTE: Workaround for collapsing empty-text buttons (eg in FormSelect in 'unselected' state).
+      display: inline-block;
+    }
   }
 
   &_hasIcon {
